Adição de pontuação e booleano de game-over